--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "docker_web_app",
-  "version": "1.0.0",
-  "description": "Node.js on Docker",
-  "author": "First Last <first.last@example.com>",
-  "main": "server.js",
   "private": true,
+  "author": "Shane McGovern <shanemcgovern@protonmail.com>",
   "scripts": {
-    "start": "node server.js"
+    "dev": "umi dev",
+    "build": "umi build",
+    "postinstall": "umi setup",
+    "setup": "umi setup",
+    "start": "npm run dev"
   },
   "dependencies": {
-    "express": "^4.20.0"
+    "umi": "^4.5.1"
+  },
+  "overrides": {
+    "path-to-regexp": "1.9.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^5.0.3"
   }
 }
