--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "umi build",
     "postinstall": "umi setup",
     "setup": "umi setup",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "prepare": "husky",
+    "test": "jest"
   },
   "dependencies": {
     "umi": "^4.5.1"
@@ -17,6 +19,8 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "typescript": "^5.0.3"
   }
 }
